--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "gulpfile.babel.js",
   "scripts": {
     "start": "gulp",
-    "build": "gulp build --production"
+    "build": "gulp build --production",
+    "deploy": "gulp deploy --production"
   },
   "author": "Foundation Yetinauts <contact@get.foundation> (https://get.foundation)",
   "license": "MIT",
   "dependencies": {
+    "aos": "^2.3.4",
     "foundation-sites": "latest",
     "jquery": "^3.6.0",
     "motion-ui": "latest",
@@ -23,6 +25,7 @@
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.27.5",
     "fs": "^0.0.1-security",
+    "gh-pages": "^3.2.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
