--- a/package.json
+++ b/package.json
@@ -34,16 +34,21 @@
     "gulp-extname": "^0.2.2",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
+    "gulp-inject": "^5.0.5",
     "gulp-load-plugins": "^2.0.7",
     "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.1",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-svgmin": "^4.1.0",
+    "gulp-svgstore": "^9.0.0",
     "gulp-terser": "^2.0.1",
     "js-yaml": "^4.1.0",
     "js-yaml-js-types": "^1.0.0",
     "node-sass": "^6.0.1",
     "panini": "latest",
     "postcss": "^8.3.11",
+    "postcss-inline-svg": "^5.0.0",
     "postcss-uncss": "^0.17.0",
     "rimraf": "^3.0.2",
     "style-sherpa": "^1.0.2",
