--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "foundation-sites": "latest",
     "jquery": "^3.6.0",
     "motion-ui": "latest",
+    "slick-carousel": "^1.8.1",
     "what-input": "^5.2.10"
   },
   "devDependencies": {
