--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "motion-ui": "latest",
     "photoswipe": "^4.1.3",
     "slick-carousel": "^1.8.1",
-    "what-input": "^5.2.10"
+    "what-input": "^5.2.10",
+    "yt-player": "^3.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
