--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,3 @@
-# RewriteEngine on
-# RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
-# RewriteRule ^ /%1 [NC,L,R]
-# RewriteCond %{REQUEST_FILENAME}.html -f
-# RewriteRule ^(.*)$ $1.html  [NC,L]
+RewriteEngine on
+RewriteBase /
+RewriteRule ^index\.html$ / [NC,R,L]
